--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div id="app"></div>
-    <script src="./boundle.js"></script>
+    <script src="../src/boundle.js"></script>
 </body>
 </html>
